--- a/.env
+++ b/.env
@@ -27,6 +27,11 @@ APP_SECRET=f6e8435f9abc874b4da06889f542a66e
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
-# DATABASE_URL="mysql://db_user:db_password@127.0.0.1:3306/db_name?serverVersion=5.7"
-DATABASE_URL="postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=13&charset=utf8"
+DATABASE_URL="mysql://root:ha7pa1la8xi3@127.0.0.1:3366/homemade_plex"
+# DATABASE_URL="postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=13&charset=utf8"
 ###< doctrine/doctrine-bundle ###
+
+###> knplabs/knp-snappy-bundle ###
+WKHTMLTOPDF_PATH=\"C:\\Program Files\\wkhtmltopdf\\bin\\wkhtmltopdf.exe\"
+WKHTMLTOIMAGE_PATH=\"C:\\Program Files\\wkhtmltopdf\\bin\\wkhtmltoimage.exe\"
+###< knplabs/knp-snappy-bundle ###
